--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "description": "",
-  "devDependencies": {
-    "@types/node": "^22.10.2",
-    "nodemon": "^3.1.9",
-    "typescript": "^5.7.2"
-  },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
+    "express": "^4.18.1",
+    "pg": "^8.7.1",
+    "prisma": "^6.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.0.0",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.0"
   }
 }
