--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.7.1",
     "prisma": "^6.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/node": "^16.0.0",
     "nodemon": "^3.1.9",
