--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-DATABASE_URL="DB URL GOES HERE"
+DATABASE_URL=""
+PORT=""
+CORS_ORIGIN=""
+ACCESS_TOKEN_SECRET=""
+ACCESS_TOKEN_EXPIRY=""
+REFRESH_TOKEN_SECRET=""
+REFRESH_TOKEN_EXPIRY=""
