--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.7.1",
-    "prisma": "^6.1.0"
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
@@ -30,6 +29,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.0.0",
     "nodemon": "^3.1.9",
+    "prisma": "^6.2.1",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.0"
