--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/node": "^16.0.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "nodemon": "^3.1.9",
+    "prettier": "^3.4.2",
     "prisma": "^6.2.1",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.8",
