--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET=""
 ACCESS_TOKEN_EXPIRY=""
 REFRESH_TOKEN_SECRET=""
 REFRESH_TOKEN_EXPIRY=""
+SENDGRID_API_KEY=""
+DOMAIN=""
+OTP_VERIFICATION_TEMPLATE_ID=""
