--- a/env.example
+++ b/env.example
@@ -1,22 +1,24 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/hirehour_db"
+# Database Configuration
+DATABASE_URL="postgresql://username:password@host:port/database_name"
 
-# JWT
-JWT_SECRET="your-jwt-secret-key"
-JWT_REFRESH_SECRET="your-jwt-refresh-secret-key"
+# JWT Configuration
+ACCESS_TOKEN_SECRET="your-access-token-secret"
+REFRESH_TOKEN_SECRET="your-refresh-token-secret"
+ACCESS_TOKEN_EXPIRY="15m"
+REFRESH_TOKEN_EXPIRY="7d"
 
-# Server
-PORT=5000
-NODE_ENV=production
-
-# Email (SendGrid)
+# SendGrid Configuration (for email)
 SENDGRID_API_KEY="your-sendgrid-api-key"
-FROM_EMAIL="noreply@hirehour.com"
+OTP_VERIFICATION_TEMPLATE_ID="your-otp-template-id"
+WELCOME_TEMPLATE_ID="your-welcome-template-id"
+DOMAIN="your-domain.com"
 
-# Firebase
+# Firebase Configuration
 FIREBASE_PROJECT_ID="your-firebase-project-id"
 FIREBASE_PRIVATE_KEY="your-firebase-private-key"
 FIREBASE_CLIENT_EMAIL="your-firebase-client-email"
 
-# CORS
+# Application Configuration
+NODE_ENV="production"
+PORT=5000
 CORS_ORIGIN="https://your-frontend-domain.com" 
