--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "hirehour_be",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "postinstall": "prisma generate",
-    "db:migrate": "prisma migrate deploy",
-    "db:generate": "prisma generate"
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
