--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hirehour_be",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
