--- a/env.example
+++ b/env.example
@@ -15,8 +15,10 @@ DOMAIN="your-domain.com"
 
 # Firebase Configuration
 FIREBASE_PROJECT_ID="your-firebase-project-id"
+FIREBASE_PRIVATE_KEY_ID="your-firebase-private-key-id"
 FIREBASE_PRIVATE_KEY="your-firebase-private-key"
 FIREBASE_CLIENT_EMAIL="your-firebase-client-email"
+FIREBASE_CLIENT_ID="your-firebase-client-id"
 
 # Application Configuration
 NODE_ENV="production"
