--- a/render.yaml
+++ b/render.yaml
@@ -28,9 +28,13 @@ services:
         sync: false
       - key: FIREBASE_PROJECT_ID
         sync: false
+      - key: FIREBASE_PRIVATE_KEY_ID
+        sync: false
       - key: FIREBASE_PRIVATE_KEY
         sync: false
       - key: FIREBASE_CLIENT_EMAIL
+        sync: false
+      - key: FIREBASE_CLIENT_ID
         sync: false
       - key: CORS_ORIGIN
         sync: false 
