--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ SENDGRID_API_KEY=""
 DOMAIN=""
 OTP_VERIFICATION_TEMPLATE_ID=""
 WELCOME_TEMPLATE_ID=""
+FIREBASE_PROJECT_ID=""
+FIREBASE_PRIVATE_KEY_ID=""
+FIREBASE_PRIVATE_KEY=""
+FIREBASE_CLIENT_EMAIL=""
+FIREBASE_CLIENT_ID=""
