--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build": "tsc",
     "start": "node dist/src/server.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test:cloudinary": "ts-node src/utils/testCloudinary.ts",
+    "test:payload": "ts-node src/utils/testPayloadSize.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +20,16 @@
     "@sendgrid/mail": "^8.1.5",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "pg": "^8.7.1"
   },
