--- a/env.example
+++ b/env.example
@@ -23,4 +23,9 @@ FIREBASE_CLIENT_ID="your-firebase-client-id"
 # Application Configuration
 NODE_ENV="production"
 PORT=5000
-CORS_ORIGIN="https://your-frontend-domain.com" 
+CORS_ORIGIN="https://your-frontend-domain.com"
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME="your-cloudinary-cloud-name"
+CLOUDINARY_API_KEY="your-cloudinary-api-key"
+CLOUDINARY_API_SECRET="your-cloudinary-api-secret" 
